--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "networkx>=3.5",
     "openai>=2.2.0",
     "anthropic>=0.69.0",
+    "litellm>=1.56.1",
     "python-dotenv>=1.1.1",
 ]
 
@@ -33,7 +34,31 @@ packages = ["stone_agent_core"]
 [project.optional-dependencies]
 dev = [
     "pytest>=8.4.2",
+    "pytest-cov>=4.0.0",
+    "pytest-asyncio>=0.21.0",
     "black>=21.12b0",
     "isort>=5.10.1",
     "mypy>=0.910",
+]
+test = [
+    "pytest>=8.4.2",
+    "pytest-cov>=4.0.0",
+    "pytest-asyncio>=0.21.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--verbose",
+    "--tb=short",
+    "--strict-markers",
+    "--disable-warnings",
+]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests",
+    "unit: marks tests as unit tests",
 ]
